# insights-content-template-renderer

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  build_deploy.sh  pr_check.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: bdd.yaml  build.yml  test.yaml  test.yml
.tekton/: content-renderer-pull-request.yaml  content-renderer-push.yaml  insights-content-template-renderer-pull-request.yaml  insights-content-template-renderer-push.yaml
dashboards/: grafana-dashboard-insights-content-template-renderer.configmap.yaml
deploy/: test.yaml
docs/: deployment.md
insights_content_template_renderer/: __init__.py  data.py  dot.py  endpoints.py  js_executor.py  logging_utils.py  models.py  sentry.py  utils.py
insights_content_template_renderer/data/: content_example.json  request_data_example.json  response_data_example.json
insights_content_template_renderer/tests/: test_dot.py  test_endpoints.py  test_js_executor.py  test_metrics.py  test_models.py  test_original_dotJS.py  utils_test.py
