[build-system]
requires = ["setuptools>=82.0.1", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "insights-content-template-renderer"
dynamic = ["version"]
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name="CCX Processing Team", email="ccx-core-processing-team@redhat.com"}
]
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

requires-python = ">= 3.11"
dependencies = [
    "boto3==1.43.51",
    "dot-js-py==2.0.0",
    "fastapi==0.139.2",
    "prometheus_fastapi_instrumentator==8.0.2",
    "pydantic==2.13.4",
    "python-json-logger==4.1.0",
    "pythonmonkey==1.3.2",
    "sentry_sdk==2.66.0",
    "uvicorn[standard]==0.51.0",
    "watchtower==3.4.0"
]

[project.urls]
Homepage = "https://github.com/RedHatInsights/insights-content-template-renderer"

[tool.setuptools.packages.find]
exclude = ["*.tests"]

[tool.setuptools_scm]

[project.optional-dependencies]
test = [
    "httpx",
    "pytest",
    "pytest-cov"
]
